--- a/index.html
+++ b/index.html
@@ -119,120 +119,177 @@
             </div>
         </div>
     </section>
-    <hr>
+    <!-- --------------------------------SECTION 3  STARTS---------------------------------- -->
     <section class="class3  section-3-spacing">
-        <div class="space std-page container">
+        <div class="space std-page container ">
             <div class="sec3-heading">
-
-
                 <h2>Frictionless, simple, easy</h2>
-
-                <p >Freshworks makes it fast and easy for businesses to delight their customers and
+                <p>Freshworks makes it fast and easy for businesses to delight their customers and
                     employees.</p>
-
-                <p >We take a fresh approach to how businesses discover, engage with, and realize
+                <p>We take a fresh approach to how businesses discover, engage with, and realize
                     value from software throughout their journey.</p>
-
-
-
             </div>
             <div class="row row-margin">
                 <div class=" col-md-5  l-col-widget ">
-
-
-                    <img class="col-image col-image-small"
-                        src="images/free-trial.png">
+                    <img class="col-image col-image-small" src="images/free-trial.png">
                     <div class="  ">
-
-
                         <h4>Get up and running with no barriers</h4>
-
                         <p>Try or purchase our software directly from our website, and onboard in a matter of days, not
                             months.</p>
-
                         <p><a href="#"><span class="forward-link link mt-xs">Start
                                     free trial <i class="icon fas fa-arrow-right"></i></span></a></p>
-
-
                     </div>
-
-
-
                 </div>
                 <div class="col-md-5  l-col-widget  col-md-offset-2 ">
-
-
-                    <img class="col-image col-image-small"
-                        src="images/pricing.png">
+                    <img class="col-image col-image-small" src="images/pricing.png">
                     <div class="  ">
-
-
                         <h4>Choose your pricing plan</h4>
-
                         <p>Our pricing plans are designed for modern business use cases and affordable for organizations
                             of all sizes.</p>
 
                         <p><a href="#"><span class="forward-link link mt-xs">See
                                     pricing <i class="icon fas fa-arrow-right"></i></span></a></p>
-
-
                     </div>
-
-
                 </div>
             </div>
             <div class="row row-margin">
                 <div class="col-md-5 l-col-widget ">
-
-
-                    <img class="col-image col-image-small"
-                      src="images/marketplace.png">
+                    <img class="col-image col-image-small" src="images/marketplace.png">
                     <div class="  ">
-
-
                         <h4>Build and customize as you go</h4>
-
                         <p>Extend and tailor experiences to meet your unique business needs, with low-code development
                             and over 1,100 custom apps made available on our marketplace.</p>
-
-                        <p><a href="#"><span
-                                    class="forward-link link mt-xs">Visit&nbsp;marketplace <i class="icon fas fa-arrow-right"></i></span></a></p>
-
-
+                        <p><a href="#"><span class="forward-link link mt-xs">Visit&nbsp;marketplace <i
+                                        class="icon fas fa-arrow-right"></i></span></a></p>
                     </div>
-
-
-
                 </div>
                 <div class="col-md-5 l-col-widget  col-md-offset-2">
-
-
-                    <img class="col-image col-image-small"
-                       src="images/efficiency.png">
+                    <img class="col-image col-image-small" src="images/efficiency.png">
                     <div class="  ">
-
-
                         <h4>Create value, fast</h4>
-
                         <p>Accelerate your team’s productivity and efficiency with modern automation and collaboration
                             tools, to get tangible results in no time.</p>
-
                         <p><a href="#"><span class="forward-link link mt-xs">Learn
                                     how <i class="icon fas fa-arrow-right"></i></span></a></p>
-
-
                     </div>
-
-
                 </div>
             </div>
         </div>
     </section>
-<hr>
+    <!-- --------------------------------SECTION 3  ENDS---------------------------------- -->
 
+    <!-- --------------------------------SECTION 4  STARTS---------------------------------- -->
 
-    <section class="class4"></section>
-    <section class="class5"></section>
+    <section class="class4 ">
+        <div class="std-page container sec-width">
+            <div class="l-section-heading align-center">
+                <h2>Trusted by 50K+ customers big and small</h2>
+                <p>We are a leading provider of modern SaaS solutions that solve multiple, complex business problems to
+                    companies of all sizes. Businesses from more than 120 countries around the world use Freshworks’
+                    products to delight their customers and employees every day.</p>
+            </div>
+            <div class="banners">
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-pearson.png ">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-brewdog.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-bridgestone.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-buying-show.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-klarna.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-vicemg.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-deichmann.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-waterstons.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-fiverr.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-exabytes.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-GF.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-multichoice.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-bluenile.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-teamviewer.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-engel.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-itv.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-delivery.png">
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="lazy-image-wrapper loaded" style="">
+                        <img class="original-image fadeIn   " src="images/logo-katz-media.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- --------------------------------SECTION 4  ENDS---------------------------------- -->
+
+    <hr>
+    <!-- --------------------------------SECTION 5 STARTS---------------------------------- -->
+
+    <!-- <section class="class5"></section> -->
+    <!-- --------------------------------SECTION 5  ENDS---------------------------------- -->
+
     <section class="class6"></section>
     <section class="class7"></section>
     <section class="class8"></section>
