--- a/index.html
+++ b/index.html
@@ -384,10 +384,13 @@
                                     <!-- <img src="images/asset7.png" alt=""> -->
                                 </div>
                                 <p class="testimonial-quote">
-                                    “Because we're managing and handling tickets faster, satisfaction skyrocketed. 98% of the users say they are 'extremely satisfied' after handling a ticket, and give us a smiley face.”
+                                    “Because we're managing and handling tickets faster, satisfaction skyrocketed. 98%
+                                    of the users say they are 'extremely satisfied' after handling a ticket, and give us
+                                    a smiley face.”
                                 </p>
                                 <div class="col-md-10 col-md-offset-1 testimonial-author">
-                                    <h6 class="author-name align-center">Alex Anheuer, Manager Workplace Services, Payvision</h6>
+                                    <h6 class="author-name align-center">Alex Anheuer, Manager Workplace Services,
+                                        Payvision</h6>
                                 </div>
                             </div>
                         </div>
@@ -399,8 +402,56 @@
         </div>
     </section>
     <!-- --------------------------------SECTION 5  ENDS---------------------------------- -->
-
-    <section class="class6"></section>
+    <hr>
+    <!-- <section class="class6"></section> -->
+    <section id="" class="class6" >
+        <div class="std-page container ">
+            <div class="sec6-heading">
+                <h2 class="align-center">We aspire to be one of the most loved companies in the world</h2>
+            </div>
+            <div class="row">
+                <div class="l-col-widget  col-md-3 col-sm-6">
+                    <img class="icon-text-image icon-text-image-medium"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksei9i7m17u4f6g0quue7y07-freshworks-banner-chat-3000x3000-final-craftsmanship-min.full.jpg">
+                    <div class="  feature-description-text-d">
+                        <h4>Culture</h4>
+                        <p>A culture that supports high-quality work, joy and pride in that work, speed to execution,
+                            and intense customer focus.</p>
+                    </div>
+                </div>
+                <div class="l-col-widget  col-md-3 col-sm-6">
+                    <img class="icon-text-image icon-text-image-medium"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksentdbp02unsng03c8bl6ys-untitled-design-2021-08-16t184407-551.full.png">
+                    <div class="  ">
+                        <h4>Diversity</h4>
+                        <p>Full-spectrum diversity, equity, and inclusion are key priorities for us.</p>
+                    </div>
+                </div>
+                <div class="l-col-widget  col-md-3 col-sm-6">
+                    <img class="icon-text-image icon-text-image-medium"
+                        src="https://website-assets-fw.freshworks.com/attachments/ckseisvvm0013o2fzr55qiheq-freshworks-banner-chat-3000x3000-final-actively-empowered-min.full.jpg">
+                    <div class="  ">
+                        <h4>Experience</h4>
+                        <p>Focus on enhancing the team experience by strengthening our managers’ leadership
+                            capabilities.</p>
+                    </div>
+                </div>
+                <div class="l-col-widget  col-md-3 col-sm-6">
+                    <img class="icon-text-image icon-text-image-medium"
+                        src="https://website-assets-fw.freshworks.com/attachments/ckseiwbr6001qtag0yhmrq0f2-ho-careers-thumbs-team.full.jpg">
+                    <div class="  ">
+                        <h4>Team</h4>
+                        <p>4,000 employees and growing in offices across India, US, Europe, and Australia.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="align-center mb-lg mt-lg">
+                <a title="" class="button button--solid " id="" target="" href="/company/life-at-freshworks"> See life
+                    at freshworks</a>
+            </div>
+        </div>
+    </section>
+    <hr>
     <section class="class7"></section>
     <section class="class8"></section>
 </body>
