--- a/index.html
+++ b/index.html
@@ -54,33 +54,6 @@
 </head>
 
 <body>
-    <!-- <section class="class1 start-right-img">
-
-        <div class="bg-img" style=" background-image: url('../../images/bg-img.png');">
-            <img style="height:540px;width:100%;" src="images/bg-img.png" alt="bg-img">
-        </div>
-        <div class="std-page start">
-            <div class="row">
-                <div class="col-md-6 start-left-box ">
-                    <h1>Delight made easy</h1>
-                    <p class="start-text">We make it fast and easy for businesses to delight their customers and
-                        employees.</p>
-                    <div class="mt-md">
-                        <a class="button btn btn-dark">GET STARTED</a>
-                        <a class="button  btn btn-outline-dark">CONTACT SALES</a>
-                    </div>
-
-                </div>
-                <div class="col-md-6 img-align-bottom">
-                    <div class="wrap-img loaded">
-                        <img class="original-img fadein" style="width:530px;" src="images/girl-with-phone.png" alt="">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section> -->
     <section class="class1">
         <div style="height: 100; width: 100%;" class="bg-img"></div>
         <div class="std-page">
@@ -315,8 +288,8 @@
 
     <!-- --------------------------------SECTION 5 STARTS---------------------------------- -->
 
-    <section class="sec-pb light-grey">
-        <div class="std-page container align-center">
+    <section class=" sec-pb light-grey">
+        <div class="class5 std-page container align-center">
             <div id="carouselExampleDark" class="carousel testimonial-home carousel-dark slide" data-bs-ride="carousel">
 
                 <ol class="carousel-indicators">
@@ -409,19 +382,19 @@
             <div class="sec6-heading">
                 <h2 class="align-center">We aspire to be one of the most loved companies in the world</h2>
             </div>
-            <div class="row">
-                <div class="l-col-widget  col-md-3 col-sm-6">
+            <div class="row align-left">
+                <div class="l-col-widget  col-md-3   col-sm-6">
                     <img class="icon-text-image icon-text-image-medium"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksei9i7m17u4f6g0quue7y07-freshworks-banner-chat-3000x3000-final-craftsmanship-min.full.jpg">
+                        src="images/culture.jpg">
                     <div class="  feature-description-text-d">
                         <h4>Culture</h4>
                         <p>A culture that supports high-quality work, joy and pride in that work, speed to execution,
                             and intense customer focus.</p>
                     </div>
                 </div>
-                <div class="l-col-widget  col-md-3 col-sm-6">
+                <div class="l-col-widget   col-md-3  col-sm-6">
                     <img class="icon-text-image icon-text-image-medium"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksentdbp02unsng03c8bl6ys-untitled-design-2021-08-16t184407-551.full.png">
+                        src="images/diversity.png">
                     <div class="  ">
                         <h4>Diversity</h4>
                         <p>Full-spectrum diversity, equity, and inclusion are key priorities for us.</p>
@@ -429,7 +402,7 @@
                 </div>
                 <div class="l-col-widget  col-md-3 col-sm-6">
                     <img class="icon-text-image icon-text-image-medium"
-                        src="https://website-assets-fw.freshworks.com/attachments/ckseisvvm0013o2fzr55qiheq-freshworks-banner-chat-3000x3000-final-actively-empowered-min.full.jpg">
+                        src="images/experience.jpg">
                     <div class="  ">
                         <h4>Experience</h4>
                         <p>Focus on enhancing the team experience by strengthening our managers’ leadership
@@ -438,15 +411,15 @@
                 </div>
                 <div class="l-col-widget  col-md-3 col-sm-6">
                     <img class="icon-text-image icon-text-image-medium"
-                        src="https://website-assets-fw.freshworks.com/attachments/ckseiwbr6001qtag0yhmrq0f2-ho-careers-thumbs-team.full.jpg">
+                        src="images/Team.jpg">
                     <div class="  ">
                         <h4>Team</h4>
                         <p>4,000 employees and growing in offices across India, US, Europe, and Australia.</p>
                     </div>
                 </div>
             </div>
-            <div class="align-center mb-lg mt-lg">
-                <a title="" class="button button--solid " id="" target="" href="/company/life-at-freshworks"> See life
+            <div class="align-center ">
+                <a  class="button btn btn-dark button-space"  href="#"> See life
                     at freshworks</a>
             </div>
         </div>
