--- a/index.html
+++ b/index.html
@@ -375,17 +375,19 @@
         </div>
     </section>
     <!-- --------------------------------SECTION 5  ENDS---------------------------------- -->
-    <hr>
+
+    <!-- --------------------------------SECTION 6 STARTS---------------------------------- -->
+
     <!-- <section class="class6"></section> -->
-    <section id="" class="class6" >
+    <section id="" class="class6">
         <div class="std-page container ">
             <div class="sec6-heading">
                 <h2 class="align-center">We aspire to be one of the most loved companies in the world</h2>
+                <p>&nbsp;</p>
             </div>
             <div class="row align-left">
                 <div class="l-col-widget  col-md-3   col-sm-6">
-                    <img class="icon-text-image icon-text-image-medium"
-                        src="images/culture.jpg">
+                    <img class="icon-text-image icon-text-image-medium" src="images/culture.jpg">
                     <div class="  feature-description-text-d">
                         <h4>Culture</h4>
                         <p>A culture that supports high-quality work, joy and pride in that work, speed to execution,
@@ -393,16 +395,14 @@
                     </div>
                 </div>
                 <div class="l-col-widget   col-md-3  col-sm-6">
-                    <img class="icon-text-image icon-text-image-medium"
-                        src="images/diversity.png">
+                    <img class="icon-text-image icon-text-image-medium" src="images/diversity.png">
                     <div class="  ">
                         <h4>Diversity</h4>
                         <p>Full-spectrum diversity, equity, and inclusion are key priorities for us.</p>
                     </div>
                 </div>
                 <div class="l-col-widget  col-md-3 col-sm-6">
-                    <img class="icon-text-image icon-text-image-medium"
-                        src="images/experience.jpg">
+                    <img class="icon-text-image icon-text-image-medium" src="images/experience.jpg">
                     <div class="  ">
                         <h4>Experience</h4>
                         <p>Focus on enhancing the team experience by strengthening our managers’ leadership
@@ -410,8 +410,7 @@
                     </div>
                 </div>
                 <div class="l-col-widget  col-md-3 col-sm-6">
-                    <img class="icon-text-image icon-text-image-medium"
-                        src="images/Team.jpg">
+                    <img class="icon-text-image icon-text-image-medium" src="images/Team.jpg">
                     <div class="  ">
                         <h4>Team</h4>
                         <p>4,000 employees and growing in offices across India, US, Europe, and Australia.</p>
@@ -419,13 +418,77 @@
                 </div>
             </div>
             <div class="align-center ">
-                <a  class="button btn btn-dark button-space"  href="#"> See life
+                <a class="button btn btn-dark button-space" href="#"> See life
                     at freshworks</a>
             </div>
         </div>
     </section>
     <hr>
-    <section class="class7"></section>
+    <section id="" class="class6">
+        <div class="std-page container ">
+            <div class="sec6-heading">
+                <h2 class="align-center">What’s new at Freshworks</h2>
+            </div>
+            <div class="row align-left">
+                    <div class="card-space col-md-4  col-sm-4">
+                        <div class="card " >
+                            <a href="#">
+                                <img src="images/card1.png" class="card-img-top" alt="...">
+                            </a>
+                            <a href="#">
+                                <div class="card-body">
+                                    <!-- <h5 class="card-title">Card title</h5> -->
+                                    <p class="align-center"><strong>Freshworks Ranked Number 10 on the Forbes 2021 Cloud
+                                            100</strong></p>
+                                    <p class="card-p">Fifth consecutive year on the list driven by Freshworks CRM and ITSM
+                                        product adoption in 120 countries&nbsp;</p>
+                                    <p ><a href="#"><span class="forward-link link mt-xs" ><strong>Read more</strong>
+                                                <i class="icon fas fa-arrow-right"></i></span></a></p>
+                                </div>
+                            </a>
+                           
+                        </div>
+                    </div>
+
+                <div class="card-space col-md-4  col-sm-4">
+                    <div class="card">
+                        <a href="#"><img src="images/card2.png" class="card-img-top" alt="..."></a>
+                        <a href="#">
+                            <div class="card-body">
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <p class="align-center adjust-p"><strong>Freshworks is a Visionary Again!</strong></p>
+                                <p class="card-p">2021 Gartner Magic Quadrant for the CRM Customer Engagement Center</p>
+                                <p "><a href="#"><span class="forward-link link mt-xs"><strong>Read more</strong>
+                                            <i class="icon fas fa-arrow-right"></i></span></a></p>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+
+
+                <div class="card-space col-md-4  col-sm-4">
+                    <div class="card">
+                        <a href="#"><img src="images/card3.png" class="card-img-top" alt="..."></a>
+                        <a href="#">
+                            <div class="card-body">
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <p class="align-center"><strong>Fresh thinking on D&amp;I&nbsp;</strong></p>
+                                <p class="card-p">How Freshworks' first Chief Diversity and Inclusion Officer plans to strike a positive balance</p>
+                                <p ><a href="#"><span class="forward-link link mt-xs"><strong>Read more</strong>
+                                            <i class="icon fas fa-arrow-right"></i></span></a></p>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="align-center ">
+                <a class="button btn btn-dark button-space" href="#">SEE ALL NEWS</a>
+            </div>
+        </div>
+    </section>
     <section class="class8"></section>
 </body>
 
