--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         </div>
     </section>
     <section class="class2">
-        <div style="padding: 0 0;"class="container">
+        <div class="container">
             <h2 class="align-h2">An experience they’ll love</h2>
             <p class="para-section-2">Our fresh approach to business software has enabled over 50,000 companies big and
                 small across the globe
                 to
                 exceed customer and employee expectations. We deliver on the unfulfilled promise of easy-to-use SaaS
                 software, and help our customers drive clear business results.</p>
-            <div class="std-page container">
+            <div style="padding: 0 0;" class="std-page container">
                 <div class="row row-margin">
                     <div class="col-lg-6 divider-right mb-md">
                         <div class="wrap wrap-no-hover two-column">
